--- a/css/contacts_mediaq.css
+++ b/css/contacts_mediaq.css
@@ -12,12 +12,15 @@
     top: 128px;
     left: calc((100vw - 338px) / 2);
     gap: 0px;
-    opacity: 0px;
     position: absolute;
     background-image: url(../assets/img/signupArrow.png);
     background-size: contain;
     background-repeat: no-repeat;
     top: -10px;
+    left: calc(100vw / 2);
+    position: absolute;
+    bottom: 25vh;
+    right: 8vw;
   }
 
   .headlinesContainer {
@@ -65,7 +68,6 @@
     height: 40px;
     padding: 8px 0px 0px 0px;
     gap: 8px;
-    opacity: 0px;
     display: flex;
     display: flex;
     background-color: white;
@@ -79,7 +81,6 @@
     height: 40px;
     padding: 8px 0px 0px 0px;
     gap: 8px;
-    opacity: 0px;
     display: flex;
     display: flex;
     background-color: white;
