--- a/css/contacts_mediaq.css
+++ b/css/contacts_mediaq.css
@@ -41,7 +41,7 @@
     padding: 10px;
     gap: 0px;
     border-radius: 20px 20px 0px 20px;
-    position: absolute;
+    position: fixed;
     display: flex;
     top: 758px;
     top: calc((100vh / 2));
