greeting Name/ initials-Name Header

--- a/assets/templates/desktop_template.html
+++ b/assets/templates/desktop_template.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../../assets/templates/templates.css">
     <link rel="stylesheet" href="../../fonts.css" />
     <script src="../../js/template.js"></script>
+    <script src="../../js/summary.js"></script>
 </head>
 <body onload="hoverSidebar()">
     <header>
@@ -15,7 +16,7 @@
         <div class="headerImg">
             <div class="boundingHelp"><img class="imgHelp" src="../../assets/img/help.png" alt=""  onclick="location.href='help.html';"></div>
             <div class="boundingProfil">
-                <p>SM</p>
+                <p id="idLoginName"></p>
             </div>
         </div>
     </header>
