--- a/css/summary.css
+++ b/css/summary.css
@@ -26,7 +26,7 @@
     font-family: "Inter";
     font-weight: 400px;
     font-size: 27px;
-    list-style: 32.4px;
+    line-height: 32.4px;
     color: rgba(42, 54, 71, 1);
 }
 
@@ -276,5 +276,74 @@
     background-color: red;
 }
 
+.vektorTextSummary{
+    display: flex;
+    gap: 30px;
+    align-items: center;
+}
 
+@media (max-width: 1440px) {
+    .summaryText {
+        padding-left: calc((100vw - 560px) / 2);
+    }
 
+    #titleSummary{
+        padding-left: calc((100vw - 560px) / 2);
+    }
+
+    #textRegards{
+        display: none;
+    }
+}
+
+@media (max-width: 1200px){
+    #titleSummary{
+        flex-direction: column;
+        align-items: baseline;
+        gap: 16px;
+    }
+
+    .vektorTextSummary{
+        flex-direction: column-reverse;
+        gap: 16px;
+        align-items: baseline;
+    }
+
+    .summaryTitleVektor{
+        width: 90px;
+        height: 3px;
+    }
+}
+
+@media (max-width: 780px) {
+    .summaryTitle{
+        font-size: 47px;
+        line-height: 56.4px;
+    }
+
+    .summaryTitleText{
+        font-size: 20px;
+        line-height: 24px;
+    }
+
+    .summaryToDO{
+        width: 186px;
+        height: 110px;
+        gap: 10px;
+    }
+
+    .summaryDoneImg{
+        width: 40px;
+        height: 40px;
+    }
+
+    .summaryNumber{
+        font-size: 47px;
+        line-height: 56.4px;
+    }
+
+    .summaryTaskText{
+        font-size: 14px;
+        line-height: 16.8px;
+    }
+}
