--- a/css/summary.css
+++ b/css/summary.css
@@ -298,6 +298,7 @@
 
 @media (max-width: 1200px){
     #titleSummary{
+        padding-top: calc(128px - 96px);
         flex-direction: column;
         align-items: baseline;
         gap: 16px;
@@ -346,4 +347,47 @@
         font-size: 14px;
         line-height: 16.8px;
     }
+
+    .summaryUrgentImg{
+        width: 40px;
+        height: 40px;
+    }
+
+    .summaryDate{
+        font-size: 16px;
+        line-height: 19.2px;
+    }
+
+    .timeLine{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 396px;
+        height: 110px;
+        padding: 28px 0px 28px 0px;
+        gap: 20px;
+    }
+
+    .timeLineVektor{
+        height: 68px;
+    }
+
+    .summarySeparateTasks{
+        width: 116px;
+        height: 116px;
+    }
+
+    .summaryText{
+        padding-top: calc(272px - 147px - 80px);
+    }
+
+    .summaryText {
+        padding-left: calc((100vw - 396px) / 2);
+    }
+
+    #titleSummary{
+        padding-left: calc((100vw - 396px) / 2);
+    }
+
+
 }
