--- a/css/contacts_mediaq.css
+++ b/css/contacts_mediaq.css
@@ -23,6 +23,10 @@
     right: 8vw;
   }
 
+  .contactsArrow:hover {
+    background-image: url(../assets/img/signupArrowHover.png);
+  }
+
   .headlinesContainer {
     left: 50px;
   }
