--- a/css/signup_mediaqueries.css
+++ b/css/signup_mediaqueries.css
@@ -1,3 +1,5 @@
+/*Media query*/
+
 @media (max-width: 1200px) {
   .signupContainer {
     left: calc((100vw - 598px) / 2);
@@ -7,6 +9,8 @@
     left: calc((100vw - 246px) / 2);
   }
 }
+
+/*Media query*/
 
 @media (max-width: 780px) {
   .logoSignupPage {
@@ -103,10 +107,6 @@
     bottom: -550px;
   }
 
-  /*.overlay.show {
-    transform: translateX(-50%) translateY(calc(-100% + 256px));
-  }*/
-
   .overlay.show {
     transform: translateX(-50%);
     animation: slideUp 0.5s ease-in-out forwards;
@@ -136,6 +136,8 @@
     width: 280px;
   }
 }
+
+/*Media query*/
 
 @media (max-width: 428px) and (max-height: 926px) {
   .logoSignupPage {
