--- a/css/contacts_mediaqueries.css
+++ b/css/contacts_mediaqueries.css
@@ -50,7 +50,7 @@
   .addNewContactOverlay {
     position: fixed;
     top: 50%;
-    left: calc(100vw- 396px);
+    left: calc(100vw / 2);
     transform: translate(-50%, -50%);
     background-color: white;
     box-shadow: -4px 0 6px 0 rgba(0, 0, 0, 0.1);
