--- a/css/contacts_mediaqueries.css
+++ b/css/contacts_mediaqueries.css
@@ -193,7 +193,7 @@
 
   /*Animation overlay window*/
 
-  @-webkit-keyframes slide-top {
+  /*@-webkit-keyframes slide-top {
     0% {
       -webkit-transform: translateY(0);
       transform: translateY(0);
@@ -212,6 +212,14 @@
     100% {
       -webkit-transform: translateY(-100px);
       transform: translateY(-100px);
+    }*/
+
+  @keyframes slide-top {
+    0% {
+      transform: translate(-50%, -50%) translateY(0);
+    }
+    100% {
+      transform: translate(-50%, -50%) translateY(-100px);
     }
   }
 
