--- a/css/contacts_mediaqueries.css
+++ b/css/contacts_mediaqueries.css
@@ -63,7 +63,7 @@
     gap: 49px;
     border-radius: 30px;
     display: flex;
-    animation: slide-top 0.5s ease-out;
+    animation: slide-up 0.5s ease-out forwards;
     transition: transform 0.5s ease-out;
   }
 
@@ -214,12 +214,21 @@
       transform: translateY(-100px);
     }*/
 
-  @keyframes slide-top {
+  /*@keyframes slide-top {
     0% {
       transform: translate(-50%, -50%) translateY(0);
     }
     100% {
       transform: translate(-50%, -50%) translateY(-100px);
+    }
+  }*/
+
+  @keyframes slide-up {
+    0% {
+      transform: translate(-50%, 0);
+    }
+    100% {
+      transform: translate(-50%, -50%);
     }
   }
 
@@ -240,7 +249,7 @@
     gap: 49px;
     border-radius: 30px;
     display: flex;
-    animation: slide-top 0.5s ease-out;
+    animation: slide-up 0.5s ease-out forwards;
     transition: transform 0.5s ease-out;
   }
 
