animation contact created

--- a/css/contacts_mediaq.css
+++ b/css/contacts_mediaq.css
@@ -127,7 +127,7 @@
     transition: bottom 0.8s ease;
   }
 
-  @keyframes myAnim {
+  /*@keyframes myAnim {
     0% {
       opacity: 0;
       transform: translateY(250px);
@@ -135,6 +135,17 @@
     100% {
       opacity: 1;
       transform: translateY(0);
+    }
+  }*/
+
+  @keyframes myAnim {
+    0% {
+      opacity: 0;
+      transform: translate(-50%, 250px);
+    }
+    100% {
+      opacity: 1;
+      transform: translate(-50%, 0);
     }
   }
 }
