edit function for subtask / firebase push

--- a/css/add_task.css
+++ b/css/add_task.css
@@ -274,7 +274,8 @@ input {
 
 .subtask-span {
     padding-left: 20px;
-    list-style: circle;
+    display: flex;
+    justify-content: space-between;
 }
 
 .footer {
