--- a/css/add_task.css
+++ b/css/add_task.css
@@ -153,6 +153,7 @@ input {
     flex-direction: column;
     font-size: 24px;
     overflow: auto;
+    margin-top: 10px;
 }
 
 #subtask {
@@ -276,6 +277,7 @@ input {
     padding-left: 20px;
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
 .footer {
@@ -394,4 +396,15 @@ input {
     background-color: yellow;
     border-radius: 50%;
     padding: 10px;
+}
+
+.subtask-button {
+    padding: 5px;
+}
+
+.subtask-button:hover {
+    background-color: rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+    padding: 5px;
+    border-radius: 50%;
 }
