--- a/css/board.css
+++ b/css/board.css
@@ -827,7 +827,7 @@ input::placeholder{
     }
 
     .columnBoard{
-        padding-bottom: 13px;
+        padding-bottom: 20px;
         height: auto;
         overflow-y: visible;
         flex-direction: row;
@@ -882,6 +882,12 @@ input::placeholder{
         width: 40px;
         height: 40px;
         padding: 3px;
+    }
+
+    .mobilBoardTaskTitles{
+        display: flex !important;
+        padding-left: 16px;
+        width: 396px;
     }
 }
 
