solved problem scrollbar board

--- a/assets/templates/desktop_template.html
+++ b/assets/templates/desktop_template.html
@@ -20,6 +20,7 @@
             </div>
         </div>
         <div id="headerNote" class="headerNote d-none">
+            <div class="headerNoteButton helpTemplate d-none" onclick="location.href='help.html';">Help</div>
             <div class="headerNoteButton" onclick="location.href='legal_notice.html';">Legal Notice</div>
             <div class="headerNoteButton" onclick="location.href='privacy_policy.html';">Privacy Policy</div>
             <div class="headerNoteButton" onclick="location.href='index.html';">Log out</div>
