--- a/assets/templates/templates.css
+++ b/assets/templates/templates.css
@@ -322,7 +322,7 @@ p {
     justify-content: space-between;
     align-items: center;
     left: 0;
-    position: absolute;
+    position: fixed;
     bottom: 0;
     width: 100%;
     height: 50px;
