--- a/css/contacts_mediaq.css
+++ b/css/contacts_mediaq.css
@@ -198,7 +198,7 @@
     left: 220px;
   }
 
-  .contactCreatedOverlay {
+  /*.contactCreatedOverlay {
     position: fixed;
     bottom: -100%;
     left: calc((100vw - 310px) / 2);
@@ -220,7 +220,7 @@
 
   .contactCreatedOverlay.show {
     animation: slideUp 0.8s ease forwards;
-  }
+  }*/
 
   .editContactOverlay,
   .leftOverlayContentEdit {
