--- a/css/contactsEdit.css
+++ b/css/contactsEdit.css
@@ -185,3 +185,33 @@
 .popupOverlay {
   display: none;
 }
+
+/*Colours*/
+
+.orange {
+  background-color: #ff7a00;
+}
+
+.purple {
+  background-color: #9327ff;
+}
+
+.blue {
+  background-color: #6e52ff;
+}
+
+.pink {
+  background-color: #fc71ff;
+}
+
+.yellow {
+  background-color: #ffbb2b;
+}
+
+.green {
+  background-color: #1fd7c1;
+}
+
+.red {
+  background-color: #e02f2f;
+}
