--- a/css/board.css
+++ b/css/board.css
@@ -776,7 +776,7 @@ input::placeholder{
 }
 
 .containerDetailCard{
-    width: 1440px;
+    width: 100vw;
     height: 1024px;
     display: flex;
     justify-content: center;
@@ -792,11 +792,15 @@ input::placeholder{
 }
 
 .leftPart{
+    /* display: flex; */
     transform: translateX(-2000px);
+    opacity: 1;
 }
 
 .leftPartOut{
     transform: translateX(2000px);
+    opacity: 0;
+    /* display: none; */
 }
 
 #addTaskMobil{
@@ -895,6 +899,75 @@ input::placeholder{
 }
 
 @media (max-width: 780px) {
+    .detailCardTaskToDo{
+        width: 396px;
+        padding: 32px 24px 32px 24px;
+        gap: 16px;
+    }
+
+    .labelClose {
+        width: 348px;
+        height: 32px;
+    }
+
+    .labelDetailCard {
+        height: 27px;
+        padding: 4px 16px 4px 16px;
+    }
+
+    .textDetailCardTitle {
+        width: 348px;
+        font-size: 36px;
+        line-height: 43.2px;
+    }
+
+    .textDetailCardContent {
+        width: 348px;
+        font-size: 16px;
+        line-height: 19.2px;
+    }
+
+    .textDetailCardDate {
+        width: 348px;
+        font-size: 16px;
+        line-height: 19.2px;
+    }
+
+    .textDetailCardPriority {
+        width: 348px;
+        font-size: 16px;
+        line-height: 19.2px;
+    }
+
+    .textDetailCardContacts {
+        width: 348px;
+        font-size: 16px;
+        line-height: 19.2px;
+    }
+
+    .contactsDetailCard {
+        width: 348px;
+    }
+
+    .contactsListCard {
+        width: 348px;
+    }
+
+    .nameContactDetailCard {
+        font-size: 16px;
+        line-height: 19.2px;
+    }
+
+    .subtasksDetailCard {
+        width: 348px;
+    }
+
+    .deleteEditDetailCard {
+        width: 348px;
+    }
+
+
+
 
 }
 
