mobil version nav bar, guest part summary, summary mobil, bug fixing hoversidebar

--- a/assets/templates/desktop_template.html
+++ b/assets/templates/desktop_template.html
@@ -9,7 +9,7 @@
     <script src="../../js/template.js"></script>
     <script src="../../js/summary.js"></script>
 </head>
-<body onload="hoverSidebar()">
+<body >
     <header>
         <div class="headerTitel">Kanban Project Management Tool</div>
         <img class="altImg" src="../../assets/img/logoLarge.svg" alt="Logo">
@@ -23,7 +23,7 @@
             <div class="headerNoteButton helpTemplate d-none" onclick="location.href='help.html';">Help</div>
             <div class="headerNoteButton" onclick="location.href='legal_notice.html';">Legal Notice</div>
             <div class="headerNoteButton" onclick="location.href='privacy_policy.html';">Privacy Policy</div>
-            <div class="headerNoteButton" onclick="location.href='index.html';">Log out</div>
+            <div class="headerNoteButton" onclick="openIndex();">Log out</div>
         </div>
     </header>
 
