--- a/assets/templates/templates.css
+++ b/assets/templates/templates.css
@@ -318,17 +318,14 @@ p {
   }
 
   nav {
+    height: 80px;
+    width: 100vw;
     background-color: rgba(42, 54, 71, 1);
-    justify-content: space-between;
-    align-items: center;
     left: 0;
     position: fixed;
     bottom: 0;
-    width: 100%;
-    height: 50px;
-    bottom: 0;
     top: auto;
-    padding: 16px 0px 48px 0px;
+    padding: 0px 16px 0px 16px;
     z-index: 1;
   }
 
@@ -336,33 +333,42 @@ p {
     display: flex;
     justify-content: space-between;
     flex-direction: row;
-    width: auto;
-    height: 80px;
-    gap: 0px;
+    align-items: center;
+    width: 100vw;
+    padding: 0px 16px 0px 16px;
   }
 
   .helpTemplate{
     display: flex;
   }
+
+  .menuFrames{
+    gap: 8px;
+    padding: 8px 35px 8px 35px;
+    border-radius: 10px;
+    justify-content: center;
+  }
 }
 
-@media (max-width: 880px) {
-  .menuSidebar {
-    width: 880px;
-  }
-
+@media (max-width: 780px) {
   .menuFrames {
-    padding: 0;
+    width: 80px;
+    height: 76px;
+    padding: 8px 0px 8px 0px;
+    gap: 10px;
+    flex-direction: column;
+    justify-content: center;
   }
 }
 
-@media (max-width: 428px) and (height: 766px) {
-  .menuSidebar {
-    width: 428px;
+@media (max-width: 428px){
+  .iconSidebar{
+    width: 24px;
+    height: 24px;
+  }
+
+  .menuSidebarHover{
     font-size: 14px;
-  }
-
-  .menuFrames {
-    padding: 0;
+    line-height: 16.8px;
   }
 }
