--- a/css/contactsFullscreen.css
+++ b/css/contactsFullscreen.css
@@ -1,6 +1,6 @@
 /*Scrollbar*/
 
-.contactsSidebar::-webkit-scrollbar {
+/* .contactsSidebar::-webkit-scrollbar {
   background-color: white;
 }
 
@@ -10,7 +10,7 @@
   border-radius: 10px;
   height: 10px;
   width: 5px;
-}
+} */
 
 /* Arrow Up */
 
