--- a/css/board.css
+++ b/css/board.css
@@ -298,11 +298,18 @@ input::placeholder{
     border-radius: 8px;
     display: flex;
     gap: 10px;
-    background-color: rgba(0, 56, 255, 1);
     font-weight: 400;
     font-size: 16px;
     line-height: 19.2px;
     color: rgba(255, 255, 255, 1);
+}
+
+.labelCard-blue{
+    background-color: rgba(0, 56, 255, 1);
+}
+
+.labelCard-green{
+    background-color: rgba(31, 215, 193, 1);
 }
 
 .labelDetailCard{
