--- a/css/contacts.css
+++ b/css/contacts.css
@@ -289,6 +289,16 @@ input[type="tel"]:focus {
   overflow-x: hidden;
 }
 
+::-webkit-scrollbar {
+  width: 8px;
+  height: 10px;
+  background-color:white;
+}
+::-webkit-scrollbar-thumb {
+  border-radius: 8px;
+  background: rgba(168, 168, 168, 1);
+}
+
 /*Button div*/
 
 .buttonContainer {
