--- a/css/legal_notice.css
+++ b/css/legal_notice.css
@@ -70,3 +70,24 @@ ul {
     font-size: 27px;
     line-height: 19.2px;
 }
+
+@media(max-width: 1440px) {
+    .container {
+        margin-left: auto;
+        margin-right: auto;
+        padding-left: 60px;
+        padding-right: 60px;
+    }
+}
+
+@media(max-width: 420px) {
+    .head {
+        display: flex;
+        flex-direction: column-reverse;
+        align-items: center;
+    }
+
+    .head a {
+        margin-left: auto;
+    }
+}
