bug fix import to server

--- a/assets/templates/template.html
+++ b/assets/templates/template.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../../assets/templates/templates.css">
-    <link rel="stylesheet" href="../../fonts.css" />
-    <script src="../../js/template.js"></script>
-    <script src="../../js/summary.js"></script>
+    <link rel="stylesheet" href="../assets/templates/templates.css">
+    <link rel="stylesheet" href="../fonts.css" />
+    <script src="../js/template.js"></script>
+    <script src="../js/summary.js"></script>
 </head>
 <body >
     <header>
         <div class="headerTitel">Kanban Project Management Tool</div>
-        <img class="altImg" src="../../assets/img/logoLarge.svg" alt="Logo">
+        <img class="altImg" src="../assets/img/logoLarge.svg" alt="Logo">
         <div class="headerImg">
-            <div class="boundingHelp"><img class="imgHelp" src="../../assets/img/help.png" alt=""  onclick="location.href='help.html';"></div>
+            <div class="boundingHelp"><img class="imgHelp" src="../assets/img/help.png" alt=""  onclick="location.href='help.html';"></div>
             <div class="boundingProfil" onclick="openNoteHeader()">
                 <p id="idLoginName"></p>
             </div>
@@ -28,7 +28,7 @@
     </header>
 
     <nav>
-        <img class="logoSidebar" src="../../assets/img/logoSidebar.png" alt="">
+        <img class="logoSidebar" src="../assets/img/logoSidebar.png" alt="">
         <div class="menuSidebar">
             <div id="frameSummary" class="menuFrames" onclick="location.href='summary.html';">
                 <div class="iconSidebar flex_center">
